react-collapse: fix accordion, make click on item work

--- a/assets/less/accordion.less
+++ b/assets/less/accordion.less
@@ -9,6 +9,7 @@
   overflow: hidden;
   position: relative;
   z-index: auto;
+  max-height: auto;
 }
 
 .accordion.hide {
